# NTK-UQ-Weather-Models

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml  tests.yml
docs/: index.html
examples/: 01_calibrate_synthetic.py  02_extract_features.py  03_emdat_dates.py
ntk_uq/: __init__.py
ntk_uq/calibration/: __init__.py  ntk.py
ntk_uq/data/: __init__.py  calibration_dates.json  emdat.py  raw.json
ntk_uq/features/: __init__.py  aifs.py  aurora.py  base.py  fourcastnet.py  pangu.py
ntk_uq/inference/: __init__.py  uncertainty.py
tests/: test_ntk_uq.py
